# Development

./: .pre-commit-config.yaml  Dockerfile  README.md  check_workbench.ipynb  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.ipynb_checkpoints/: check_workbench-checkpoint.ipynb
projects/: simple.py  test.py
projects/.ipynb_checkpoints/: simple-checkpoint.py
projects/predictions/: pfizer.ipynb
projects/predictions/.ipynb_checkpoints/: pfizer-checkpoint.ipynb
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup
tests/: t1.py  test_simpletest.py
workbench/: .env  Dockerfile  docker-compose.yml
