[tool.poetry]
name = "Development"
version = "0.1.0"
description = "Short description of your project"
authors = ["Constantin-Bogdan Craciun <bbogdan.craciun@email.com>"]
license = "nope"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^24.10.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
