[tool.poetry]
name = "Development"
version = "0.1.0"
description = "Short description of your project"
authors = ["Constantin-Bogdan Craciun <bbogdan.craciun@email.com>"]
license = "nope"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9"
jupyterlab = "^4.0"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
pre-commit = "^3.3"



[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
jupyterlab = "^4.0"
pytest = "^8.4.1"
sqlalchemy = "^2.0.43"
pre-commit = "^3.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
